# claw4love

./: .gitignore  Cargo.toml  README.md
crates/c4l-api/: Cargo.toml
crates/c4l-api/src/: client.rs  error.rs  lib.rs  oauth.rs  session_bootstrap.rs  sse.rs  types.rs
crates/c4l-bridge/: Cargo.toml
crates/c4l-bridge/src/: lib.rs  protocol.rs
crates/c4l-cli/: Cargo.toml
crates/c4l-cli/src/: main.rs  session.rs
crates/c4l-commands/: Cargo.toml
crates/c4l-commands/src/: builtins.rs  lib.rs  registry.rs  traits.rs
crates/c4l-config/: Cargo.toml
crates/c4l-config/src/: lib.rs
crates/c4l-engine/: Cargo.toml
crates/c4l-engine/src/: engine.rs  events.rs  lib.rs  tool_registry.rs
crates/c4l-mcp/: Cargo.toml
crates/c4l-mcp/src/: client.rs  config.rs  lib.rs  transport.rs
crates/c4l-plugins/: Cargo.toml
crates/c4l-plugins/src/: hook.rs  lib.rs  memory.rs  plugin.rs  skill.rs
crates/c4l-state/: Cargo.toml
crates/c4l-state/src/: app_state.rs  cost.rs  lib.rs  store.rs
crates/c4l-tools/: Cargo.toml
crates/c4l-tools/src/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  registry.rs  traits.rs
crates/c4l-tui/: Cargo.toml
crates/c4l-tui/src/: app.rs  input.rs  lib.rs  render.rs
crates/c4l-types/: Cargo.toml
crates/c4l-types/src/: command.rs  lib.rs  session.rs  tool.rs
crates/c4l-utils/: Cargo.toml
crates/c4l-utils/src/: ansi.rs  lib.rs  token_filter.rs  worktree.rs
playground/: Cargo.toml
playground/src/: main.rs  message.rs  permissions.rs
porting/: 00-overview.md  01-workspace-and-types.md  02-core-engine.md  03-tool-system.md  04-session-and-state.md  05-terminal-ui.md  06-commands-and-extensions.md  07-advanced-and-polish.md
research/: 00-index.md  01-claw-code.md  01b-claw-code-dev-rust.md  02-leak-claude-code.md  03-everything-claude-code.md  04-superpowers.md  05-rtk.md  06-oauth-auth-flow.md  07-crush.md
