[package]
name = "c4l-bridge"
description = "IDE bridge for claw4love: VS Code, JetBrains integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
