[package]
name = "c4l-cli"
description = "claw4love CLI — Claude Code reimagined in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claw4love"
path = "src/main.rs"

[dependencies]
c4l-types = { workspace = true }
c4l-config = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
