[package]
name = "c4l-cli"
description = "claw4love CLI — Claude Code reimagined in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claw4love"
path = "src/main.rs"

[dependencies]
c4l-types = { workspace = true }
c4l-config = { workspace = true }
c4l-api = { workspace = true }
c4l-engine = { workspace = true }
c4l-tools = { workspace = true }
c4l-commands = { workspace = true }
c4l-state = { workspace = true }
c4l-tui = { workspace = true }
c4l-plugins = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
