[package]
name = "c4l-commands"
description = "Slash commands for claw4love: /help, /cost, /commit, /review, etc."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c4l-types = { workspace = true }
c4l-state = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
