[package]
name = "c4l-config"
description = "Configuration loading for claw4love — TOML files, env vars, defaults"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c4l-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
