[package]
name = "c4l-mcp"
description = "Model Context Protocol client for claw4love"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
