[package]
name = "c4l-tools"
description = "Tool trait and essential tool implementations for claw4love"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c4l-types = { workspace = true }
c4l-api = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
