[package]
name = "c4l-types"
description = "Core types for claw4love — messages, tools, commands, permissions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
