[package]
name = "c4l-utils"
description = "Shared utilities for claw4love: token filtering, worktrees, ANSI stripping"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
c4l-types = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
